--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "rsa-fdh"
-version = "0.4.1"
+name = "ehl-rsa-fdh"
+version = "0.5.0"
 authors = ["phayes <patrick.d.hayes@gmail.com>"]
 edition = "2018"
 keywords = ["crypto", "rsa", "signature", "blind"]
@@ -16,12 +16,12 @@ codecov = { repository = "phayes/rsa-fdh", branch = "master", service = "github"
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-rsa = { version = "0.3.0", features = ["expose-internals"] }
-fdh = "0.7.3"
-num-bigint = { version = "0.6", features = [
+rsa = { version = "0.5.0", features = ["expose-internals"] }
+fdh = { version = "0.8", package = "ehl-fdh" }
+num-bigint = { version = "0.7", features = [
     "zeroize"
 ], package = "num-bigint-dig" }
-rand = "0.7.3"
+rand = "0.8.4"
 subtle = "2.3.0"
 digest = "0.9.0"
 thiserror = "1.0.22"
@@ -30,4 +30,4 @@ thiserror = "1.0.22"
 sha2 = "0.9.2"
 sha-1 = "0.9.2"
 hex = "0.4.2"
-rand = "0.7.3"
+rand = "0.8.4"
